cambios a info de companñia

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "Point",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "We know tech, let us be your strategic partner and place you at the vanguard of the digital transformation. Maximize your efficiency through our technological tools and innovative strategies.",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
