--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "gatsby-plugin-google-fonts": "1.0.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
