--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-cli": "^2.12.109",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-google-analytics": "^2.1.35",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.40",
     "gatsby-plugin-offline": "^3.0.25",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
@@ -51,8 +52,7 @@
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1",
-    "wowjs": "^1.1.3",
-    "gatsby-plugin-google-fonts": "1.0.1"
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
