--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-gtag": "^2.7.0",
     "gatsby-plugin-manifest": "^2.2.40",
     "gatsby-plugin-offline": "^3.0.25",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
